// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`match snapshot while editing 1`] = `
<DocumentFragment>
  <div>
    <form>
      <input
        type="text"
        value="default todo"
      />
      <button>
        Update
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <div>
    <li>
      default todo
    </li>
    <button>
      Edit
    </button>
    <button>
      X
    </button>
  </div>
</DocumentFragment>
`;
